--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </p>
         </div>
     </section>
-    <section class="benefits">
+    <aside class="benefits">
         <div class="benefit-article">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -76,19 +76,19 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </section>
+    </aside>
 
 </main>
 
 
 
 
-    <div class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2024 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
