--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <main>
     <section class="hero" ></section>
     <section class="content">
-        <div class="content-article">
+        <div class="content-art">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -55,21 +55,21 @@
         </div>
     </section>
     <aside class="benefits">
-        <div class="benefit-article">
+        <div class="benefit-art">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-article">
+        <div class="benefit-art">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-article">
+        <div class="benefit-art">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
