--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             </p>
         </div>
         
-        <div id="online-reputation-management" class="content-article">
+        <div id="online-reputation-management" class="content-art">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="content-article">
+        <div id="social-media-marketing" class="content-art">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
