--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
@@ -16,20 +17,22 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization" alt="search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization" alt="search engine optimization">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management" alt="online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management" alt="online reputation management">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing" alt="social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing" alt="social media marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
     </header>
-    
+    <!-- Main section -->
 <main>
+    <!-- First section contain background image -->
     <section class="hero" ></section>
+    <!-- Second section with three topics  -->
     <section class="content">
         <div class="content-article">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
@@ -40,38 +43,39 @@
         </div>
         
         <div id="online-reputation-management" class="content-article">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="online reputation management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="content-article">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
     </section>
+    <!-- Aside bar section  -->
     <aside class="benefits">
         <div class="benefit-article">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-article">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-article">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
