updated the link and verified are all functionals

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section class="hero"></section>
       <!-- Second section with three topics  -->
       <section class="content">
-        <div class="content-article">
+        <div class="content-article" id="search-engine-optimization">
           <img
             src="./assets/images/search-engine-optimization.jpg"
             alt="Search Engine Optimization"
